Adicionando formatação de estilo do formulario

--- a/index.html
+++ b/index.html
@@ -16,5 +16,59 @@
         </div>
         <button>Login</button>
     </nav>
+
+    <section>
+
+        <header>
+            <h1>BootCamp DNC</h1>    
+            <h2>Esse será um evento exclusivo para todos os alunos <br>
+                da <b>DNC</b>, que querem <span class="invert">acelerar sua carreira</span> com uma <br>
+                semana intensiva de conteúdo de mercado entre <br>
+                <span class="invert">BACK-END, FRONT-END & BANCO DE DADOS.</span> <br>
+            </h2>
+        </header>
+
+        <form>
+            <div class="form-group">
+                <label>Nome:</label>
+                <input type="text" name="Nome" id="nome" placeholder="Insira seu Nome aqui!">
+            </div>
+
+            <div class="form-group">
+                <label>Sobrenome:</label>
+                <input type="text" name="Sobrenome" id="sobrenome" placeholder="Insira seu Sobrenome aqui!">
+            </div>
+
+            <div class="form-group">
+                <label>Area de interesse:</label>
+                <div class="checkbox-itens">
+                    <input type="checkbox" value="front">
+                    <label>Front-end</label>
+
+                    <input type="checkbox" value="back">
+                    <label>Back-end</label>
+
+                    <input type="checkbox" value="bd">
+                    <label>Banco de dados</label>
+            </div>
+
+            <div class="form-group">
+                <label>E-mail:</label>
+                <input type="email" name="Email" id="email" placeholder="Insira seu email aqui!">
+            </div>
+
+            <div class="form-group">
+                <label>Telefone::</label>
+                <input type="text" name="Phone" id="telefone" placeholder="(99) 99999-9999">
+            </div>
+
+            <div class="form-group">
+                <label>Insira um frase criativa aqui:</label>
+                <input type="text" name="Frase" id="frase" placeholder="Coloque sua frase criativa aqui!">
+            </div>
+            <input type="submit" value="Cadastrar">
+
+        </form>
+    </section>
 </body>
 </html>
