Atualizando minha pagina do bootcamp

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav id="principal">
         <div id="menu">
-            <a href="">Home</a>
-            <a href="">Últimas Edições</a>
-            <a href="">Requisitos para participar</a>
+            <a href="#">Home</a>
+            <a href="#">Últimas Edições</a>
+            <a href="#">Requisitos para participar</a>
         </div>
         <button>Login</button>
     </nav>
@@ -66,7 +66,7 @@
                 <label>Insira um frase criativa aqui:</label>
                 <input type="text" name="Frase" id="frase" placeholder="Coloque sua frase criativa aqui!">
             </div>
-            <input type="submit" value="Cadastrar">
+            <input type="submit" value="Cadastrar" id="button-cadastrar">
 
         </form>
     </section>
@@ -76,21 +76,21 @@
             <nav>
                 <h5>Escolas</h5>
                 <ul>
-                    <li><a href="">Formação em Tecnologia</a></li>
-                    <li><a href="">Formação em Marketing</a></li>
-                    <li><a href="">Formação em Dados</a></li>
-                    <li><a href="">Formação em Projetos</a></li>
-                    <li><a href="">Formação em Produtos</a></li>
+                    <li><a href="#">Formação em Tecnologia</a></li>
+                    <li><a href="#">Formação em Marketing</a></li>
+                    <li><a href="#">Formação em Dados</a></li>
+                    <li><a href="#">Formação em Projetos</a></li>
+                    <li><a href="#">Formação em Produtos</a></li>
                 </ul>
             </nav>
         <div>
             <nav>
                 <h5>Sobre a DNC</h5>
                 <ul>
-                    <li><a href="">História</a></li>
-                    <li><a href="">Missão em valores</a></li>
-                    <li><a href="">Trabalhe conosco</a></li>
-                    <li><a href="">Conteúdo gratuito</a></li>
+                    <li><a href="#">História</a></li>
+                    <li><a href="#">Missão em valores</a></li>
+                    <li><a href="#">Trabalhe conosco</a></li>
+                    <li><a href="#">Conteúdo gratuito</a></li>
                 </ul>
             </nav>
         </div>
@@ -99,8 +99,8 @@
             </div>
         </div>
         <div class="linha2">
-            <a href="">Termos de uso</a>
-            <a href="">Política de Privacidade</a>
+            <a href="#">Termos de uso</a>
+            <a href="#">Política de Privacidade</a>
         </div>
     </footer>
 </body>
